--- a/style.css
+++ b/style.css
@@ -77,12 +77,55 @@ section {
 }
 
 .borderBox {
+    opacity: 0;
+    border-radius: 2px;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     position: relative;
     height: 800px;
     width: 500px;
     background-color: transparent;
     z-index: 3;
     overflow: hidden;
+}
+
+h1{
+    margin-top: 10%;
+    height: 20%;
+    width: 100%;
+    font-size: 40px;
+}
+
+.ligneVertical {
+    height: 40%;
+    width: 2px;
+    background-color: white;
+}
+
+a {
+    display: block;
+    width: 70%;
+    height: 70px;
+    position: absolute;
+    left: 50%;
+    bottom: 10%;
+    line-height: 70px;
+    transform: translateX(-50%);
+    border: 2px solid white;
+    text-decoration: none;
+    font-size: 30px;
+    color: white;
+    border-radius: 5px;
+    transition-duration: 0.5s;
+    transition-property: background-color;
+}
+
+a:hover {
+    background-color: rgba(255, 255, 255, 0.364);
 }
 
 .border{
